WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171381
Performing data interaction with plain text into a contenteditable does not insert any content
https://bugs.webkit.org/show_bug.cgi?id=171381
Summary
Performing data interaction with plain text into a contenteditable does not i...
Wenson Hsieh
Reported
2017-04-27 10:54:11 PDT
Dragging plain text into a contenteditable does not insert any content
Attachments
Patch
(2.11 KB, patch)
2017-04-27 11:01 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(2.13 KB, patch)
2017-04-27 11:26 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-27 11:01:11 PDT
Created
attachment 308409
[details]
Patch
Wenson Hsieh
Comment 2
2017-04-27 11:26:11 PDT
Created
attachment 308415
[details]
Patch for landing
Wenson Hsieh
Comment 3
2017-04-27 13:11:57 PDT
Comment on
attachment 308415
[details]
Patch for landing Looks like this is stuck in commit queue.
WebKit Commit Bot
Comment 4
2017-04-27 14:18:02 PDT
Comment on
attachment 308415
[details]
Patch for landing Clearing flags on attachment: 308415 Committed
r215893
: <
http://trac.webkit.org/changeset/215893
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug