Performing data interaction with plain text into a contenteditable does not insert any content https://bugs.webkit.org/show_bug.cgi?id=171381

Reviewed by Tim Horton.

Attempt to read plain-text-conformant UTI types as kUTTypePlainText before reading them as kUTTypeText.
This allows WebItemProviderPasteboard to properly materialize an NSString in -valuesForPasteboardType:
inItemSet: using a pre-loaded NSData blob.

This scenario is covered by DataInteractionTests.ExternalSourceUTF8PlainTextOnly, but DataInteractionTests
are temporarily disabled due to incompatibilities with the current internal SDK.

* platform/ios/PasteboardIOS.mm:
(WebCore::readPasteboardWebContentDataForType):


Canonical link: https://commits.webkit.org/188287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215893 268f45cc-cd09-0410-ab3c-d52691b4dbfc